ДЗ 5 додав час для переходів

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,19 +60,19 @@
                 <div class="container">
                     <ul class="btn-list list">
                         <li class="item">
-                            <button class="btn-link" type="button">Усі</button>
+                            <button class="btn-link" type="button"><span class="btn-text">Усі</span> </button>
                         </li>
                         <li class="item">
-                            <button class="btn-link" type="button">Веб-сайти</button>
+                            <button class="btn-link" type="button"><span class="btn-text">Веб-сайти</span></button>
                         </li>
                         <li class="item">
-                            <button class="btn-link" type="button">Додатки</button>
+                            <button class="btn-link" type="button"><span class="btn-text">Додатки</span></button>
                         </li>
                         <li class="item">
-                            <button class="btn-link" type="button">Дизайн</button>
+                            <button class="btn-link" type="button"><span class="btn-text">Дизайн</span></button>
                         </li>
                         <li class="item">
-                            <button class="btn-link" type="button">Маркетинг</button>
+                            <button class="btn-link" type="button"><span class="btn-text">Маркетинг</span></button>
                         </li>
                     </ul>
                     <ul class="gallery-list list">
