--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <main>
             <section class="hero">
                 <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
-                <button class="button" type="button" cursor="pointer">Замовити послугу</button>
+                <button class="button " type="button" cursor="pointer">Замовити послугу</button>
             </section>
             <section class="section section-features">
                 <div class="container">
@@ -445,3 +445,5 @@
 
 
 <!-- status bar -->
+
+<!--!  <h1 class="animate__animated animate__bounce">An animated element</h1>  -->
