--- a/portfolio.html
+++ b/portfolio.html
@@ -77,63 +77,99 @@
                     </ul>
                     <ul class="gallery-list list">
                         <li class="item">
-                            <img src="./images/tehnocriak.jpg" alt="Фотографії на моніторі" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/tehnocriak.jpg" alt="Фотографії на моніторі" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Технокряк</h3>
                                 <p class="texte">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/poster.jpg" alt="Два баскетболіста в повітрі" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/poster.jpg" alt="Два баскетболіста в повітрі" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Постер New Orlean vs Golden Star</h3>
                                 <p class="texte">Дизайн</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/restoraunt.jpg" alt="Емблема ресторану" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/restoraunt.jpg" alt="Емблема ресторану" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Ресторан Seafood</h3>
                                 <p class="texte">Додаток</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/prime.jpg" alt="Накладні навушники" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/prime.jpg" alt="Накладні навушники" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Проєкт Prime</h3>
                                 <p class="texte">Маркетинг</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/boxes.jpg" alt="Дві пакувальні коробочки" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/boxes.jpg" alt="Дві пакувальні коробочки" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Проєкт Boxes</h3>
                                 <p class="texte">Додаток</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/borders.jpg" alt="Силует карти світу на моніторі" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/borders.jpg" alt="Силует карти світу на моніторі" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Inspiration has no Borders</h3>
                                 <p class="texte">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/edition.jpg" alt="Відкрита книга" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/edition.jpg" alt="Відкрита книга" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Видання Limited Edition</h3>
                                 <p class="texte">Дизайн</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/lab.jpg" alt="Бірка з написом" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/lab.jpg" alt="Бірка з написом" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Проєкт LAB</h3>
                                 <p class="texte">Маркетинг</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img src="./images/business.jpg" alt="Робона на ноутбуці" width="370" />
+                            <div class="img-text-container">
+                                <img src="./images/business.jpg" alt="Робона на ноутбуці" width="370" />
+                                <p class="item-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="gallery-container">
                                 <h3 class="gallery-title">Growing Business</h3>
                                 <p class="texte">Додаток</p>
