--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                             <a class="nav-studio link" href="./index.html">Студія</a>
                         </li>
                         <li class="item">
-                            <a class="nav-portfolio link" href="./portfolio.html">Портфоліо</a>
+                            <a class="nav-portfolio link emphasis" href="./portfolio.html">Портфоліо</a>
                         </li>
                         <li class="item">
                             <a class="nav-contact link" href="#">Контакти</a>
